// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Snap Switch Change checked 1`] = `
<div
  class="ob-switch"
>
  <div
    class="ob-switch__title"
  >
    checked
  </div>
  <div
    class="ob-switch__container"
  >
    <div
      class="ob-switch__mask"
    />
    <input
      class="ob-switch ob-switch__switch"
      name=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch Snap Switch color 1`] = `
<div
  class="ob-switch"
>
  <div
    class="ob-switch__title"
  >
    
  </div>
  <div
    class="ob-switch__container"
  >
    <div
      class="ob-switch__mask"
    />
    <input
      class="ob-switch ob-switch__switch"
      name=""
      style="border-color: #ff4455; background-color: rgb(255, 68, 85);"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch Snap render Switch -- props border 1`] = `
<div
  class="ob-switch ob-switch--without-border"
>
  <div
    class="ob-switch__title"
  >
    border
  </div>
  <div
    class="ob-switch__container"
  >
    <div
      class="ob-switch__mask"
    />
    <input
      class="ob-switch ob-switch__switch"
      name=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch Snap render Switch -- props checked 1`] = `
<div
  class="ob-switch"
>
  <div
    class="ob-switch__title"
  >
    checked
  </div>
  <div
    class="ob-switch__container"
  >
    <div
      class="ob-switch__mask"
    />
    <input
      class="ob-switch ob-switch__switch"
      name=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch Snap render Switch -- props disabled 1`] = `
<div
  class="ob-switch"
>
  <div
    class="ob-switch__title"
  >
    disabled
  </div>
  <div
    class="ob-switch__container ob-switch--disabled"
  >
    <div
      class="ob-switch__mask"
    />
    <input
      class="ob-switch ob-switch__switch"
      disabled=""
      name=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch Snap render Switch -- props disabled 2`] = `
<div
  class="ob-switch"
>
  <div
    class="ob-switch__title"
  >
    disabled
  </div>
  <div
    class="ob-switch__container ob-switch--disabled"
  >
    <div
      class="ob-switch__mask"
    />
    <input
      class="ob-switch ob-switch__switch"
      disabled=""
      name=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch Snap render Switch -- props title 1`] = `
<div
  class="ob-switch"
>
  <div
    class="ob-switch__title"
  >
    title
  </div>
  <div
    class="ob-switch__container"
  >
    <div
      class="ob-switch__mask"
    />
    <input
      class="ob-switch ob-switch__switch"
      name=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch Snap render initial Switch 1`] = `
<div
  class="ob-switch"
>
  <div
    class="ob-switch__title"
  >
    
  </div>
  <div
    class="ob-switch__container"
  >
    <div
      class="ob-switch__mask"
    />
    <input
      class="ob-switch ob-switch__switch"
      name=""
      type="checkbox"
    />
  </div>
</div>
`;
